--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -2,5 +2,6 @@
   <a routerLink="/profile">Profil</a>
   <a routerLink="/users">Utilisateurs</a>
   <a routerLink="/films">Films</a>
-  <a routerLink="/admin" *ngIf="auth.currentUser.value?.role === 'admin'">Admin</a>
+  <a routerLink="/admin" *ngIf="auth.currentUser.value?.role==='admin'">Admin</a>
+  <button (click)="logout()">Logout</button>
 </nav>
