--- a/frontend/src/app/shared/user-card/user-card.component.html
+++ b/frontend/src/app/shared/user-card/user-card.component.html
@@ -1,6 +1,6 @@
 <div class="user-card">
   <h3>{{ user.name }}</h3>
   <div *ngFor="let theme of user.themes">
-    <app-theme-badge [theme]="theme"></app-theme-badge>
+    <app-theme-badge [name]="theme"></app-theme-badge>
   </div>
 </div>
