--- a/frontend/src/app/pages/films/film-recommendations.component.html
+++ b/frontend/src/app/pages/films/film-recommendations.component.html
@@ -1,4 +1,6 @@
-<h2>Recommandations de films</h2>
-<div *ngFor="let film of films">
-  <p>{{ film.title }} - Thème : {{ film.theme }}</p>
+<div class="film-container">
+  <h2>Recommandations de films</h2>
+  <div *ngFor="let film of films">
+    <p>{{ film.title }} - Thème : {{ film.theme }}</p>
+  </div>
 </div>
